@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1738 2003/11/18 00:57:25 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.1739 2003/11/18 03:39:34 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-19 08:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c minor fix to hb_strAtSkipStrings()
 
 2003-11-17 19:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
